<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Abouts">
  <include layout="@layout/customtoolbar"/>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="5dp"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Estimates"
               android:textStyle="bold"
               android:textSize="22sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/estimate_explain"
               android:textSize="18sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Credit/Debts"
               android:textStyle="bold"
               android:textSize="22sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               android:layout_marginTop="15dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/credits_explain"
               android:textSize="18sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Cash Records"
               android:textStyle="bold"
               android:textSize="22sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               android:layout_marginTop="15dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/cash_explain"
               android:textSize="18sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Analytics"
               android:textStyle="bold"
               android:textSize="22sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               android:layout_marginTop="15dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/analytics"
               android:textSize="18sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Reminders"
               android:textStyle="bold"
               android:textSize="22sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               android:layout_marginTop="15dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/explain_reminder"
               android:textSize="18sp"
               android:fontFamily="@font/asap_2"
               android:paddingLeft="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/black"
               />
           <Button
               android:id="@+id/next"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Next"
               android:layout_gravity="end"
               android:layout_marginRight="20dp"
               android:layout_marginTop="15dp"
               android:textSize="15sp"

               />
       </LinearLayout>
   </ScrollView>
</LinearLayout>