<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivities.BudgetHelp"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/app_color"
                android:src="@drawable/back_icon_btn" />
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/asap_2"
                android:text="Help Budgets"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
              android:text="Budgets"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="22sp"
              android:textStyle="bold"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginLeft="30dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"
              />
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="400dp"
              android:src="@raw/budget_ls"
              android:layout_marginTop="10dp"
             />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/budgets_main_sn"
              android:textSize="18sp"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginTop="10dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/budget_action"
              android:textSize="18sp"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              />
          <TextView
              android:text="Adding Budgets"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="22sp"
              android:textStyle="bold"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginLeft="30dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"
              />
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="400dp"
              android:src="@raw/budget_adding"
              android:layout_marginTop="10dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/budget_addition"
              android:textSize="18sp"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginTop="10dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              />
          <TextView
              android:text="Budget Items"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="22sp"
              android:textStyle="bold"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginLeft="30dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"
              />
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="400dp"
              android:src="@raw/budget_items"
              android:layout_marginTop="10dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/budgets_ls"
              android:textSize="18sp"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginTop="10dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/asap_2"
              android:text="Adding budget item"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              android:textSize="22sp"
              android:layout_marginLeft="30dp"
              android:textStyle="bold" />
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="400dp"
              android:src="@raw/budget_items_add"
              android:layout_marginTop="10dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/budget_item_add"
              android:textSize="18sp"
              android:fontFamily="@font/asap_2"
              android:paddingLeft="5dp"
              android:layout_marginTop="10dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/black"
              />
      </LinearLayout>
        </ScrollView>
</LinearLayout>