<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivities.CashHelp"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/app_color"
                android:src="@drawable/back_icon_btn" />
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/asap_2"
                android:text="Cash Help"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="Cash transaction follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@raw/cashes"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_follow"
                android:textSize="18sp"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                />
            <TextView
                android:text="Deposit List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@raw/deposits"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_deposit_ls"
                android:textSize="18sp"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                />
            <TextView
                android:text="Record cash deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@raw/add_deposit"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit_adding"
                android:textSize="18sp"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                />
            <TextView
                android:text="Withdraw List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@raw/withdrawcash_ls"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_withdraw_ls"
                android:textSize="18sp"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                />


            <TextView
                android:text="Record cash withdrawal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@raw/add_withdraw"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_adding"
                android:textSize="18sp"
                android:fontFamily="@font/asap_2"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>